<resources>
    <string name="app_name">KinopoiskAppView</string>

    <string name="movie_picture">movie picture</string>
    <string name="review">review</string>
    <string name="movie">movie</string>
    <string name="poster_description">poster description</string>
    <string name="reviews_button">Reviews</string>
    <string name="trailers_button">Trailers</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="added">Added:</string>

    <string name="trailers_list_title">Trailers for the movie %1$s</string>

    <string name="review_list_title">Reviews for the movie %1$s</string>
    <string name="review_likes">Likes: %1$s</string>
    <string name="review_dislikes">Dislikes: %1$s</string>

    <string name="error">Error</string>
    <string name="try_again">Try Again</string>
    <string name="favourite_movies">favourite movies</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</string>
    <string name="empty_list_text_view">Нет Избранных Фильмов</string>
</resources>