<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.moviedetail.MovieDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/posterImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/favouriteTextView"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterImageView"
            tools:text="Anora" />

        <TextView
            android:id="@+id/favouriteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="16dp"
            android:text="@string/added"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/titleTextView"
            app:layout_constraintEnd_toStartOf="@id/favouriteImageView"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/posterImageView" />

        <ImageView
            android:id="@+id/favouriteImageView"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:contentDescription="@string/favourite_icon"
            android:padding="16dp"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/favouriteTextView"
            app:layout_constraintTop_toBottomOf="@id/posterImageView"
            tools:srcCompat="@android:drawable/checkbox_on_background" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/year_color"
            app:layout_constraintEnd_toStartOf="@id/genresTextView"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            tools:text="2025" />

        <TextView
            android:id="@+id/genresTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/year_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/yearTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            tools:text="комедия боевик драма" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearTextView"
            tools:text="@string/text_placeholder" />

        <Button
            android:id="@+id/reviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/reviews_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <Button
            android:id="@+id/trailerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/trailers_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>